# lssa

./: .deny.toml  .gitignore  .taplo.toml  Cargo.toml  DocsFeedback.md  README.md  bedrock_signing_key  docker-compose.override.yml  docker-compose.yml  flake.nix  rust-toolchain.toml
.github/: pull_request_template.md
.github/actions/install-logos-blockchain-circuits/: action.yaml
.github/actions/install-nomos-circuits-compatibility/: action.yml
.github/workflows/: ci.yml  publish_image.yml
LEZ testnet v0.1 tutorials/: custom-tokens.md  token-transfer.md
accounts/: Cargo.toml
accounts/src/: lib.rs
accounts/src/account_core/: address.rs  mod.rs
accounts/src/key_management/: constants_types.rs  ephemeral_key_holder.rs  mod.rs  (+1 more)
bedrock/: README.md  cfgsync.yaml  docker-compose.yml
bedrock_client/: Cargo.toml
bedrock_client/src/: lib.rs  paths.rs
bedrock_client/src/structs/: header_id.rs  info.rs  mod.rs  tx.rs
ci_scripts/: build-macos.sh  build-ubuntu.sh  deploy.sh  lint-ubuntu.sh  setup-nomos-circuits.sh  test-ubuntu.sh
common/: Cargo.toml
common/src/: block.rs  config.rs  error.rs  indexed_merkle_tree.rs  lib.rs  nullifier_sparse_merkle_tree.rs  sequencer_client.rs  test_utils.rs  transaction.rs
completions/: README.md
completions/zsh/: _wallet
consensus/: Cargo.toml
consensus/src/: lib.rs
core_primitives/src/: commitment.rs  nullifier.rs  transaction.rs  utxo.rs
docs/LEZ testnet v0.1 tutorials/: associated-token-accounts.md
examples/program_deployment/: Cargo.toml  README.md
examples/program_deployment/methods/guest/: Cargo.toml
explorer_service/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
explorer_service/public/: explorer.css
explorer_service/src/: api.rs  format_utils.rs  lib.rs  main.rs
indexer/: Cargo.toml
indexer/core/: Cargo.toml
indexer/core/src/: block_store.rs  config.rs  lib.rs  state.rs
indexer/service/: Cargo.toml  Dockerfile  docker-compose.yml  docker-entrypoint.sh
indexer/service/configs/: indexer_config.json
indexer/service/protocol/: Cargo.toml
indexer/service/protocol/src/: convert.rs  lib.rs
indexer/service/rpc/: Cargo.toml
indexer/service/rpc/src/: lib.rs
indexer/service/src/: lib.rs  main.rs  mock_service.rs  service.rs
indexer/src/: config.rs  lib.rs  message.rs  state.rs
indexer_core/: Cargo.toml
indexer_core/src/: block_store.rs  config.rs  lib.rs
indexer_service/: Cargo.toml  docker-compose.yml
indexer_service/protocol/src/: convert.rs  lib.rs
indexer_service/rpc/src/: lib.rs
indexer_service/src/: lib.rs  main.rs  mock_service.rs  service.rs
integration_tests/: Cargo.toml
integration_tests/bedrock/: README.md  cfgsync.yaml
integration_tests/bedrock/scripts/: run_logos_blockchain_node.sh
integration_tests/configs/debug/sequencer/: sequencer_config.json
integration_tests/configs/debug/wallet/: wallet_config.json
integration_tests/configs/indexer/: indexer_config.json
integration_tests/configs/sequencer/: sequencer_config.json
integration_tests/configs/sequencer/bedrock_local_attached/: sequencer_config.json
integration_tests/configs/sequencer/detached/: sequencer_config.json
integration_tests/configs/wallet/: wallet_config.json
integration_tests/src/: config.rs  lib.rs  test_suite_map.rs  tps_test_utils.rs
integration_tests/tests/: account.rs  amm.rs  block_size_limit.rs  indexer.rs  keys_restoration.rs  pinata.rs  program_deployment.rs  token.rs  tps.rs  wallet_ffi.rs
integration_tests/tests/auth_transfer/: private.rs  public.rs
key_protocol/: Cargo.toml
key_protocol/src/: lib.rs
mempool/: Cargo.toml
mempool/src/: lib.rs
networking/: Cargo.toml
networking/src/: lib.rs
node_core/: Cargo.toml
node_core/src/: lib.rs
node_rpc/: Cargo.toml
node_rpc/src/: lib.rs  process.rs
node_runner/: Cargo.toml
node_runner/src/: main.rs
nssa/: Cargo.toml  build.rs  rust-toolchain.toml
nssa/core/: Cargo.toml
nssa/program_methods/: Cargo.toml
nssa/src/: address.rs  error.rs  lib.rs  merkle_tree.rs  program.rs  public_transaction.rs  state.rs
nssa/test_program_methods/: Cargo.toml
proc_macro_test_attribute/: Cargo.toml
proc_macro_test_attribute/src/: lib.rs
program_methods/: Cargo.toml
program_methods/guest/: Cargo.toml
programs/amm/: Cargo.toml
programs/token/: Cargo.toml
rpc_primitives/src/: requests.rs
sc_core/: Cargo.toml
sc_core/src/: blob_utils.rs  cryptography.rs  lib.rs  private_state.rs  proofs_circuits.rs  public_context.rs  traits.rs  transaction_payloads_tools.rs
sequencer_core/: Cargo.toml
sequencer_core/src/: block_settlement_client.rs  block_store.rs  config.rs  indexer_client.rs  lib.rs  mock.rs  transaction_mempool.rs
sequencer_core/src/sequencer_store/: accounts_store.rs  block_store.rs  mod.rs
sequencer_rpc/: Cargo.toml
sequencer_rpc/src/: lib.rs  net_utils.rs  process.rs
sequencer_runner/: Cargo.toml  Dockerfile  bedrock_signing_key
sequencer_runner/src/: lib.rs  main.rs
storage/: Cargo.toml
storage/src/: commitments_sparse_merkle_tree.rs  error.rs  indexer.rs  lib.rs  nullifier.rs  nullifier_sparse_merkle_tree.rs  sc_db_utils.rs  sequencer.rs  transaction.rs
template/: README.md
template/sc_example/: Cargo.toml
template/zk_test_template/: Cargo.toml
template/zk_test_template/src/: lib.rs
template/zk_test_template/test_methods/guest/: Cargo.toml
test_program_methods/: Cargo.toml
test_program_methods/guest/: Cargo.toml
utxo/: Cargo.toml
utxo/src/: lib.rs  utxo_core.rs  utxo_tree.rs
vm/: Cargo.toml
vm/src/: lib.rs
wallet/: Cargo.toml
wallet-ffi/: Cargo.toml  build.rs  cbindgen.toml  wallet_ffi.h
wallet-ffi/src/: account.rs  error.rs  keys.rs  lib.rs  pinata.rs  sync.rs  transfer.rs  types.rs  wallet.rs
wallet-ffi/tests/: ffi.rs
wallet-tui/: Cargo.toml
wallet-tui/src/: main.rs
wallet/src/: chain_storage.rs  config.rs  helperfunctions.rs  lib.rs  main.rs  pinata_interactions.rs  poller.rs  privacy_preserving_tx.rs  token_program_interactions.rs  token_transfers.rs  transaction_utils.rs
zkvm/: Cargo.toml
zkvm/src/: lib.rs
(+146 files in other folders)
