[package]
name = "bedrock_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
url.workspace = true
futures.workspace = true
serde_json.workspace = true
common-http-client.workspace = true
