[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
common.workspace = true
bedrock_client.workspace = true

anyhow.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
borsh.workspace = true
futures.workspace = true
url.workspace = true
nomos-core.workspace = true
