[package]
name = "indexer_service"
version = "0.1.0"
edition = "2024"

[dependencies]
indexer_service_protocol.workspace = true
indexer_service_rpc = { workspace = true, features = ["server"] }
common.workspace = true
bedrock_client.workspace = true

clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util.workspace = true
env_logger.workspace = true
log.workspace = true
jsonrpsee.workspace = true
async-trait = "0.1.89"
serde.workspace = true
serde_json.workspace = true
borsh.workspace = true
futures.workspace = true
url.workspace = true
logos-blockchain-core.workspace = true

[features]
# Return mock responses with generated data for testing purposes
mock-responses = []
