[package]
name = "sequencer_core"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
common.workspace = true
storage.workspace = true
mempool.workspace = true
indexer.workspace = true

base58.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
chrono.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
testnet = []

[dev-dependencies]
futures.workspace = true
