[package]
name = "sequencer_core"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
common.workspace = true
storage.workspace = true
mempool.workspace = true

base58.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
chrono.workspace = true
log.workspace = true
bedrock_client.workspace = true
key-management-system-service = { git = "https://github.com/logos-blockchain/logos-blockchain.git" }
nomos-core = { git = "https://github.com/logos-blockchain/logos-blockchain.git" }
zksign = { git = "https://github.com/logos-blockchain/logos-blockchain.git", default-features = false }
rand.workspace = true
reqwest.workspace = true
borsh.workspace = true

[features]
default = []
testnet = []

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures.workspace = true
