[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
lru.workspace = true
thiserror.workspace = true
hex.workspace = true

rocksdb.workspace = true

[dependencies.common]
path = "../common"
