[package]
name = "program_deployment"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
wallet.workspace = true

tokio = { workspace = true, features = ["macros"] }
clap.workspace = true
risc0-zkvm.workspace = true
hex.workspace = true
rln = "1.0.0"
risc0-zkvm-platform = "2.2.1"
