[package]
name = "indexer_core"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
common.workspace = true
bedrock_client.workspace = true

anyhow.workspace = true
log.workspace = true
serde.workspace = true
tokio.workspace = true
borsh.workspace = true
futures.workspace = true
url.workspace = true
logos-blockchain-core.workspace = true
serde_json.workspace = true
async-stream.workspace = true
