[package]
name = "indexer_service_protocol"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
nssa_core = { workspace = true, optional = true, features = ["host"] }
nssa = { workspace = true, optional = true }
common = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }
schemars.workspace = true
base64.workspace = true

[features]
# Enable conversion to/from NSSA core types
convert = ["dep:nssa_core", "dep:nssa", "dep:common"]
