[package]
name = "example_program_deployment_programs"
version = "0.1.0"
edition = "2024"

[dependencies]
nssa_core.workspace = true

hex.workspace = true
bytemuck.workspace = true
risc0-zkvm.workspace = true
risc0-zkvm-platform = "2.2.1"
rln = "1.0.0"
light-poseidon = "0.2"
ark-bn254 = "0.4"
ark-ff = "0.4"
jf-poseidon2 = { default-features = false, features = ["bn254"], git = "https://github.com/EspressoSystems/jellyfish.git", rev = "dc166cf0f803c3e5067f9dfcc21e3dade986a447" }
rust-poseidon-bn254-pure = { git = "https://github.com/logos-storage/rust-poseidon-bn254-pure" }